-Bug fix: Submenu options applied again via API function SetCustomScrollableMenuOptions did not apply (visibleRowsSubmenu e.g.)
-Bug fix: Name of handler for context menu show and hide changed to proper Uppercase OnContextMenu*
-Changed XML handlers for the header's text search etc. to call one LSM function to reduce redundant code


-v- ---------------LSM v2.32 - 2024-10-19---------------------------------------------------------------------------- -v-
-[Additions]-
-Added attribute ".doNotFilter boolean" to all entryTypes. If true then do not hide those controls if a search/filter is used
  -> e.g. used for a button "Apply changes" at a submenu to apply checkboxes checked/unchecked state now even if search filter was hiding non-matching checkboxes
-Changed collapsible header to expand if you click the whole header, and not only the small v^ button

-v- ---------------LSM v2.31 - 2024-08-25---------------------------------------------------------------------------- -v-
-[Fixes]-
--Clicking a checkbox/button in a context menu's submenu closes the context menu

-v- ---------------LSM v2.3 - 2024-08-19---------------------------------------------------------------------------- -v-
-[Fixes]-
--Fixed iconData nil check for multi icon control
--Fixed getComboBox to return the actual context menu combobox so that submenu entries clicked run their callback
--Fixed API RunCustomScrollableMenuItemsCallback to use the m_sortedItems, and not a copy (so updating the dataSource works)
--Using proper function GetOptions() where needed now
--Removed duplicate recursive loop over all (nested)submenu entries to update the values -> in function UpdateItems
--Fixed API function RunCustomScrollableMenuItemsCallback, params ...

-[Additions]
--Accept a custom filter function via options.customFilterFunc
----function customFilterFunc(p_item, p_filterString) return boolean true (found) / false (not found)